# DroneDriver

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectPlan.txt  README.md  compile.sh
Drone/: CMakeLists.txt  beacon.cpp  beacon.h  communicator.cpp  communicator.h  drone.cpp  drone.h  drone_state.cpp  drone_state.h  drone_status.h  main.cpp  test_heartbeat.cpp  threadsafe_queue.h
GroundControl/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h  reliable_sender.h
libs/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
