add_executable(Drone main.cpp drone.cpp drone_state.cpp communicator.cpp beacon.cpp)
add_executable(HeartBeat test_heartbeat.cpp)
target_link_libraries(Drone PRIVATE SimpleUdp)
target_link_libraries(Drone PRIVATE mavlink)
target_link_libraries(HeartBeat PRIVATE mavlink)
add_dependencies(Drone generate_c_headers)
add_dependencies(HeartBeat generate_c_headers)
target_compile_options(Drone PRIVATE -Wno-address-of-packed-member)
target_compile_options(HeartBeat PRIVATE -Wno-address-of-packed-member)
target_include_directories(Drone PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/SimpleUDP)